--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -7,7 +7,8 @@
       "@stories": ["stories"],
       "@components": ["components"],
       "@config": ["demoConfig"]
-    }
+    },
+    "jsx": "react"
   }
 }
 
