Fix tap to edit
We had too many flexbox's trying to grow, so the right side took over.

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "expo-crypto": "~13.0.2",
-    "ferns-ui": "0.46.1",
+    "ferns-ui": "*",
     "react": "18.2.0",
     "stream-browserify": "^3.0.0"
   },
