--- a/packages/ui-demo/app.json
+++ b/packages/ui-demo/app.json
@@ -28,6 +28,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
+      "bundler": "metro",
       "build": {
         "babel": {
           "include": ["victory-native"]
