--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/config-plugins": "~8.0.0",
+    "@expo/metro-runtime": "^3.2.1",
     "@expo/webpack-config": "^19.0.1",
     "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.17.0",
