--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -127,6 +127,8 @@
     "react-router-dom": "^6.23.0"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo-google-fonts/titillium-web": "^0.2.3",
     "@expo/vector-icons": "^14.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.0",
