Split demo and demo configs. Add first layout

--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "@stories": ["stories"],
       "@components": ["components"],
-      "@config": ["demoConfig"]
+      "@config": ["demoConfig"],
+      "@story-config": ["story-config"],
     },
     "jsx": "react"
   }
