Added basic routing. Need to fix stories for dev

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -74,7 +74,9 @@
       "tsconfigRootDir": "./"
     },
     "rules": {
-      "@typescript-eslint/explicit-function-return-type": "off"
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "react/function-component-definition": "off",
+      "import/no-default-export": "off"
     }
   },
   "prettier": {
