--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -140,6 +140,7 @@
     "expo-haptics": "~13.0.1",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-localization": "~15.0.3",
     "libphonenumber-js": "^1.10.61",
     "lodash": "^4.17.21",
