Remove types from git
Types will be built locally for dev and on the build server for
deploying the demo site. They reference line numbers, so they're going
to change way too much.
Also remove outdated out.json.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ packages/ui/.expo
 packages/ui-demo/.expo
 apps/demo/node_modules
 apps/demo/.expo
+# Generate this locally and on the build only, it jumps around too much to be useful in git
+apps/demo/ui-types-documentation.json
