Convert svg icons to react components

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -59,6 +59,7 @@
     ],
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off",
+      "import/no-default-export": "off",
       "ban/ban": [
         "error",
         {
@@ -117,6 +118,7 @@
     "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-keyed-flatten-children": "^3.0.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "tsc-watch": "^6.0.4",
