--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -30,6 +30,7 @@
     "react-native-markdown-view": "^1.1.4",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-web": "~0.19.6",
     "stream-browserify": "^3.0.0",
@@ -60,6 +61,7 @@
     "eslint-plugin-unused-imports": "3.2.0",
     "postcss": "8.4.38",
     "prettier": "^3.2.5",
+    "react-native-svg-transformer": "^1.4.0",
     "typedoc": "^0.25.12",
     "typescript": "~5.3.3"
   },
