--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -7,11 +7,13 @@
     "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
     "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
     "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "build": "tsc",
     "build-preview": "NODE_OPTIONS=--openssl-legacy-provider yarn build-web",
     "build-web": "NODE_OPTIONS=--openssl-legacy-provider npx expo export",
     "lint": "eslint"
   },
   "dependencies": {
+    "@expo-google-fonts/comfortaa": "^0.2.3",
     "crypto-browserify": "^3.12.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
