--- a/.github/workflows/ui-demo-ci.yml
+++ b/.github/workflows/ui-demo-ci.yml
@@ -3,11 +3,11 @@ name: UI Demo Continuous Integration
 on:
   push:
     paths:
-      - 'packages/ui-demo/**'
+      - 'apps/demo/**'
 
 defaults:
   run:
-    working-directory: packages/ui
+    working-directory: apps/demo
 
 jobs:
   test:
@@ -22,28 +22,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-#      - name: Get yarn cache directory path
-#        id: yarn-cache-dir-path
-#        run: echo "::set-output name=dir::$(yarn cache dir)"
-#      - uses: actions/cache@v3
-#        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-#        with:
-#          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-#          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-#          restore-keys: |
-#            ${{ runner.os }}-yarn-
-
       - name: Install whole project dependencies
-        # if: steps.yarn-cache.outputs.cache-hit != 'true' # I think we want to install every time,
-        # but use the cache?
         run: yarn --frozen-lockfile
-        working-directory: 'packages/ui-demo'
+        working-directory: 'apps/demo'
+      # - name: build ferns-ui
+      #   run : yarn build
+      #   working-directory: 'packages/ui'
       - name: yarn lint
         run: yarn lint
-        working-directory: 'packages/ui-demo'
-#      - name: yarn build
-#        run: yarn build
-#      - name: yarn test
-#        run: yarn test
-#        env:
-#          CI: true
+        working-directory: 'apps/demo'
