Set ports for UI
This way you can run UI Demo and another Expo app without always having to
hit "y" because they're using the same port.

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
-    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
-    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
-    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "start": "RCT_METRO_PORT=8085 NODE_OPTIONS=--openssl-legacy-provider expo start --port 8085",
+    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android --port 8085",
+    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios --port 8085",
+    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web --port 8085",
     "build": "tsc",
     "build-preview": "NODE_OPTIONS=--openssl-legacy-provider yarn build-web",
     "build-web": "NODE_OPTIONS=--openssl-legacy-provider npx expo export",
