--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -154,7 +154,7 @@
     "react-native": "0.74.1",
     "react-native-actions-sheet": "^0.9.3",
     "react-native-calendars": "^1.1305.0",
-    "react-native-drawer-layout": "3.3.0",
+    "react-native-drawer-layout": "^3.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-modalize": "^2.1.1",
