--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,6 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
-    directory: "/packages/ui-demo"
+    directory: "/apps/demo"
     schedule:
       interval: "weekly"
