--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -27,11 +27,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-keyed-flatten-children": "^3.0.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
     "react-native-markdown-view": "^1.1.4",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-swiper-flatlist": "^3.2.3",
@@ -43,7 +43,7 @@
     "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "^3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/webpack-config": "^19.0.1",
     "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.17.0",
