--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -151,10 +151,10 @@
     "react-datetime-picker": "^6.0.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-actions-sheet": "^0.9.3",
     "react-native-calendars": "^1.1305.0",
-    "react-native-drawer-layout": "3.3.0",
+    "react-native-drawer-layout": "^3.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-modalize": "^2.1.1",
