--- a/.github/workflows/ui-demo-ci.yml
+++ b/.github/workflows/ui-demo-ci.yml
@@ -5,10 +5,6 @@ on:
     paths:
       - 'apps/demo/**'
 
-defaults:
-  run:
-    working-directory: apps/demo
-
 jobs:
   test:
     name: Run all tests
@@ -27,7 +23,7 @@ jobs:
         working-directory: 'apps/demo'
       - name: build ferns-ui
         run : yarn build
-        working-directory: 'apps/demo'
+        working-directory: 'packages/ui'
       - name: yarn lint
         run: yarn lint
         working-directory: 'apps/demo'
