--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/demo/node_modules && yarn",
     "test": "yarn --cwd packages/ui test",
     "postinstall": "patch-package",
-    "upgrades": "cd apps/demo && npx expo install --fix && cd ../../ && node syncUiFromUiDemo.js"
+    "upgrades": "cd apps/demo && npx expo install --fix && cd ../../ && node syncUiFromUiDemo.js && yarn"
   },
   "workspaces": {
     "packages": [
