--- a/.github/workflows/ui-demo-ci.yml
+++ b/.github/workflows/ui-demo-ci.yml
@@ -5,10 +5,6 @@ on:
     paths:
       - 'apps/demo/**'
 
-defaults:
-  run:
-    working-directory: apps/demo
-
 jobs:
   test:
     name: Run all tests
@@ -25,9 +21,9 @@ jobs:
       - name: Install whole project dependencies
         run: yarn --frozen-lockfile
         working-directory: 'apps/demo'
-      # - name: build ferns-ui
-      #   run : yarn build
-      #   working-directory: 'packages/ui'
+      - name: build ferns-ui
+        run : yarn build
+        working-directory: 'packages/ui'
       - name: yarn lint
         run: yarn lint
         working-directory: 'apps/demo'
