--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -27,11 +27,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-keyed-flatten-children": "^3.0.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
     "react-native-markdown-view": "^1.1.4",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-swiper-flatlist": "^3.2.3",
@@ -43,16 +43,16 @@
     "@babel/core": "^7.24.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/config-plugins": "~8.0.0",
-    "@expo/metro-runtime": "^3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/webpack-config": "^19.0.1",
     "@shopify/flash-list": "1.6.4",
     "@types/lodash": "^4.17.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.6.0",
     "eslint-config-ferns": "^0.5.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-comment-length": "^1.7.3",
+    "eslint-plugin-comment-length": "^2.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -61,8 +61,8 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-react-perf": "^3.3.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-unused-imports": "3.2.0",
-    "postcss": "8.4.38",
+    "eslint-plugin-unused-imports": "^4.1.3",
+    "postcss": "8.4.39",
     "prettier": "^3.2.5",
     "typedoc": "^0.25.12",
     "typescript": "~5.3.3"
