--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -96,10 +96,10 @@
     "@typescript-eslint/parser": "^8.2.0",
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
-    "eslint": "^9.6.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-ban": "^1.6.0",
-    "eslint-plugin-comment-length": "^2.1.0",
+    "eslint-plugin-comment-length": "^1.7.3",
     "eslint-plugin-ferns": "^0.3.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-lodash": "^7.1.0",
@@ -109,7 +109,7 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-unused-imports": "^4.1.3",
+    "eslint-plugin-unused-imports": "3.2.0",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.2",
     "jest-github-actions-reporter": "^1.0.3",
