--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-  # Maintain dependencies for GitHub Actions
+  # Maintain dependencies for npm
   - package-ecosystem: "npm"
     directory: "/packages/ui"
     schedule:
