--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,9 @@ updates:
         applies-to: version-updates
         patterns:
           - "*"
+        ignore:
+          - dependency-name: "eslint"
+            versions: ["9.x"]
         exclude-patterns:
           - "@expo/*"
           - "@react-native-community/*"
@@ -80,6 +83,9 @@ updates:
         applies-to: version-updates
         patterns:
           - "*"
+        ignore:
+          - dependency-name: "eslint"
+            versions: ["9.x"]
         exclude-patterns:
           - "@expo/*"
           - "@react-native-community/*"
