--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -59,6 +59,7 @@
     ],
     "rules": {
       "@typescript-eslint/explicit-function-return-type": "off",
+      "react-native-a11y/has-valid-accessibility-descriptors": "off",
       "ban/ban": [
         "error",
         {
