--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -158,6 +158,7 @@
     "react-native-drawer-layout": "^3.3.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^4.1.5",
     "react-native-picker-select": "^9.1.3",
