--- a/apps/demo/app.json
+++ b/apps/demo/app.json
@@ -4,7 +4,7 @@
     "slug": "ferns",
     "scheme": "ferns",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
