--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,9 +20,6 @@
       "react-app"
     ]
   },
-  "jest": {
-    "globalSetup": "./jest-setup.js"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -85,6 +82,7 @@
   ],
   "devDependencies": {
     "@expo/config-plugins": "~8.0.0",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.14",
     "@types/luxon": "^3.4.2",
