--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -13,40 +13,40 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@expo-google-fonts/comfortaa": "^0.2.3",
+    "@expo-google-fonts/comfortaa": "^0.4.1",
     "crypto-browserify": "^3.12.1",
-    "expo": "^52.0.37",
-    "expo-constants": "~17.0.7",
-    "expo-crypto": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.11",
+    "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-status-bar": "~2.2.3",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mdurl": "^2.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-keyed-flatten-children": "^3.0.2",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-keyed-flatten-children": "^5.0.0",
+    "react-native": "0.79.3",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-swiper-flatlist": "^3.2.4",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "^0.20.0",
     "stream-browserify": "^3.0.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/config-plugins": "~9.0.0",
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/config-plugins": "~10.0.0",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/webpack-config": "^19.0.1",
-    "@shopify/flash-list": "1.7.3",
-    "@types/lodash": "^4.17.14",
+    "@shopify/flash-list": "1.7.6",
+    "@types/lodash": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^8.57.0",
@@ -64,8 +64,8 @@
     "eslint-plugin-unused-imports": "4.1.4",
     "postcss": "8.4.39",
     "prettier": "^3.3.3",
-    "typedoc": "^0.25.12",
-    "typescript": "~5.3.3"
+    "typedoc": "^0.28.5",
+    "typescript": "~5.8.3"
   },
   "private": true,
   "eslintConfig": {
@@ -96,6 +96,6 @@
     "@expo/cli": "0.17.0"
   },
   "engine": {
-    "node": "18"
+    "node": "22"
   }
 }
