Migrate from ESLint to Biome

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,7 +10,9 @@
     "build": "tsc",
     "build-preview": "NODE_OPTIONS=--openssl-legacy-provider yarn build-web",
     "build-web": "NODE_OPTIONS=--openssl-legacy-provider npx expo export",
-    "lint": "eslint"
+    "lint": "biome check app components demoConfig.tsx stories story-config",
+    "lintfix": "biome check --write app components demoConfig.tsx stories story-config",
+    "lintfixunsafe": "biome check --write --unsafe app components demoConfig.tsx stories story-config"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.4.1",
@@ -47,21 +49,7 @@
     "@expo/webpack-config": "^19.0.1",
     "@shopify/flash-list": "1.7.6",
     "@types/lodash": "^4.17.17",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^8.57.0",
-    "eslint-config-ferns": "^0.5.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-comment-length": "^2.1.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-lodash": "^8.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-native": "^5.0.0",
-    "eslint-plugin-react-perf": "^3.3.3",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "4.2.0",
+    "@biomejs/biome": "^2.3.6",
     "postcss": "8.5.6",
     "prettier": "^3.3.3",
     "typedoc": "^0.28.5",
