--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,8 +5,9 @@
   "license": "Apache-2.0",
   "scripts": {
     "local": "tsc-watch --onSuccess \"cp -a dist/* ../flourish/node_modules/ferns-ui/dist\"",
-    "lint": "eslint",
-    "lintfix": "eslint --fix",
+    "lint": "biome check src",
+    "lintfix": "biome check --write src",
+    "lintfixunsafe": "biome check --write --unsafe src",
     "build": "tsc",
     "dev": "tsc -w",
     "deps": "node checkDeps.js",
@@ -56,24 +57,9 @@
     "@types/react-datetime-picker": "^5.0.0",
     "@types/react-signature-canvas": "^1.0.5",
     "@types/react-time-picker": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-ban": "^2.0.0",
-    "eslint-plugin-comment-length": "^2.1.1",
-    "eslint-plugin-ferns": "^0.3.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-lodash": "^8.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-native": "^5.0.0",
-    "eslint-plugin-react-native-a11y": "^3.3.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unused-imports": "4.1.4",
+    "@biomejs/biome": "^2.3.6",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.7",
     "jest-github-actions-reporter": "^1.0.3",
