--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "editor.codeActionsOnSave": {
       "editor.organizeImports": "explicit"
     }
-  }
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
