--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -17,35 +17,37 @@
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.4.1",
     "crypto-browserify": "^3.12.1",
-    "expo": "^53.0.11",
-    "expo-constants": "~17.1.6",
-    "expo-crypto": "~14.1.5",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54",
+    "expo-constants": "~18.0.11",
+    "expo-crypto": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-router": "~6.0.19",
+    "expo-status-bar": "~3.0.9",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mdurl": "^2.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-keyed-flatten-children": "^5.0.0",
-    "react-native": "0.79.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-keyed-flatten-children": "^5.1.1",
+    "react-native": "0.81.5",
     "react-native-haptic-feedback": "^2.0.3",
-    "react-native-hyperlink": "^0.0.22",
+    "react-native-hyperlink": "^0.1.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-swiper-flatlist": "^3.2.4",
-    "react-native-web": "^0.20.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-swiper-flatlist": "^3.2.5",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "stream-browserify": "^3.0.0",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.27.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/config-plugins": "~10.0.0",
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/config-plugins": "~54.0.4",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/webpack-config": "^19.0.1",
     "@shopify/flash-list": "1.7.6",
     "@types/lodash": "^4.17.17",
