--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,13 +48,13 @@
   ],
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
-    "@expo/config-plugins": "~10.0.0",
+    "@expo/config-plugins": "~54.0.4",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.17",
-    "@types/luxon": "^3.4.2",
+    "@types/lodash": "^4.17.16",
+    "@types/luxon": "^3.6.2",
     "@types/mdurl": "^2.0.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
     "@types/react-datetime-picker": "^5.0.0",
     "@types/react-signature-canvas": "^1.0.5",
     "@types/react-time-picker": "^6.0.0",
@@ -65,60 +65,61 @@
     "jest-github-actions-reporter": "^1.0.3",
     "mdurl": "^2.0.0",
     "prettier": "^3.3.3",
-    "react": "19.0.0",
-    "react-keyed-flatten-children": "^5.0.0",
-    "react-router": "^6.23.0",
-    "react-router-dom": "^6.23.0",
+    "react": "19.1.0",
+    "react-keyed-flatten-children": "^5.1.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.30.1",
     "tsc-watch": "^7.1.1",
     "typescript": "~5.8.3"
   },
   "peerDependencies": {
-    "react": "19.0.0",
-    "react-router": "^6.23.0",
-    "react-router-dom": "^6.23.0"
+    "react": "19.1.0",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.30.1"
   },
   "dependencies": {
-    "@expo-google-fonts/nunito": "^0.4.1",
-    "@expo-google-fonts/titillium-web": "^0.4.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo-google-fonts/nunito": "^0.4.2",
+    "@expo-google-fonts/titillium-web": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
-    "@react-native-picker/picker": "2.11.0",
-    "expo-clipboard": "~7.1.4",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-localization": "~16.1.5",
-    "libphonenumber-js": "^1.12.9",
+    "@react-native-picker/picker": "2.11.1",
+    "expo-clipboard": "~8.0.8",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-localization": "~17.0.8",
+    "libphonenumber-js": "^1.12.31",
     "lodash": "^4.17.21",
-    "luxon": "^3.6.1",
-    "patch-package": "^8.0.0",
+    "luxon": "^3.7.2",
+    "patch-package": "^8.0.1",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^11.0.0",
-    "react-datetime-picker": "^6.0.1",
+    "react-date-picker": "^12.0.1",
+    "react-datetime-picker": "^7.0.1",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-actions-sheet": "^0.9.3",
     "react-native-calendars": "^1.1312.1",
-    "react-native-drawer-layout": "4.1.10",
-    "react-native-gesture-handler": "~2.25.0",
-    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-drawer-layout": "4.2.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-places-autocomplete": "^2.6.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modalize": "^2.1.1",
-    "react-native-permissions": "^5.4.1",
+    "react-native-permissions": "^5.4.4",
     "react-native-picker-select": "^9.1.3",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-signature-canvas": "^4.7.4",
-    "react-native-svg": "15.11.2",
-    "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-svg": "15.12.1",
+    "react-native-swiper-flatlist": "^3.2.5",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-time-picker": "^7.0.0"
   }
