--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "editor.codeActionsOnSave": {
       "editor.organizeImports": "explicit"
     }
-  }
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
