--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -61,6 +61,7 @@
     "@types/react-time-picker": "^6.0.0",
     "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.1",
+    "expo-modules-core": "^3.0.29",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.7",
     "jest-github-actions-reporter": "^1.0.3",
@@ -70,6 +71,7 @@
     "react-keyed-flatten-children": "^5.1.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.30.1",
+    "react-test-renderer": "19.1.0",
     "tsc-watch": "^7.1.1",
     "typescript": "~5.8.3"
   },
