--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -120,6 +120,7 @@
     "eslint-plugin-react-native-a11y": "^3.3.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
+    "expo-modules-core": "^3.0.29",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.7",
     "jest-github-actions-reporter": "^1.0.3",
@@ -129,6 +130,7 @@
     "react-keyed-flatten-children": "^5.1.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.30.1",
+    "react-test-renderer": "19.1.0",
     "tsc-watch": "^7.1.1",
     "typescript": "~5.8.3"
   },
