--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -86,6 +86,7 @@
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "^5.0.1",
     "@react-native-picker/picker": "2.11.0",
+    "emoji-datasource": "^16.0.0",
     "expo-clipboard": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
